--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,6 @@ services:
   adminer:
     image: docker.io/library/adminer
     restart: always
+    depends_on: postgresql
     ports:
       - 9091:8080
