--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=paperless-api
+server.port=8081
+spring.jackson.date-format=at.fhtw.swkom.paperless.services.RFC3339DateFormat
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
