--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   minio:
     image: quay.io/minio/minio
@@ -11,7 +9,8 @@ services:
     volumes:
       - ./container-data/minio:/data
     command: server /data --console-address ":9090"
-
+    networks:
+      - paperless-network
 
   postgresql:
     image: docker.io/library/postgres:16.4-alpine
@@ -23,10 +22,29 @@ services:
       POSTGRES_PASSWORD: postgresqlpasswd
     volumes:
       - ./container-data/postgresql:/var/lib/postgresql/data
+    networks:
+      - paperless-network
   
   adminer:
     image: docker.io/library/adminer
     restart: always
-    depends_on: postgresql
+    depends_on: 
+      - postgresql
     ports:
       - 9091:8080
+    networks:
+      - paperless-network
+
+  rest-api:
+    image: fhtw.at/swkom/paperless-api:latest
+    depends_on:
+      - postgresql
+      - minio
+    ports:
+      - 8081:8081
+    networks:
+      - paperless-network
+
+networks:
+  paperless-network:
+    driver: bridge
