--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -170,5 +170,10 @@
             <artifactId>jakarta.interceptor-api</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.12</version>
+        </dependency>
     </dependencies>
 </project>
