--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,5 @@
-:2015 {
-	root * ./frontend/paperless_frontend/build
+:80 {
+	root * /srv
 	file_server
 	encode gzip zstd
 	try_files {path} /index.html
