--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 spring.jackson.date-format=at.fhtw.swkom.paperless.services.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.application.name=paperless-rest
-minio.endpoint=http://localhost:9000
+minio.endpoint=http://127.0.0.1:9000
 minio.credentials.accesskey=${minioAccessKey}
 minio.credentials.secretkey=${minioSecretKey}
 minio.bucket=default
