--- a/compose-development.yml
+++ b/compose-development.yml
@@ -8,7 +8,7 @@ services:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: miniopasswd
     volumes:
-      - ../container-data/minio:/data
+      - ./container-data/minio:/data
     command: server /data --console-address ":9090"
     networks:
       - paperless-network
@@ -21,7 +21,7 @@ services:
       POSTGRES_USER: postgresqluser
       POSTGRES_PASSWORD: postgresqlpasswd
     volumes:
-      - ../container-data/postgresql:/var/lib/postgresql/data
+      - ./container-data/postgresql:/var/lib/postgresql/data
     networks:
       - paperless-network
   
@@ -30,7 +30,7 @@ services:
     depends_on:
       - postgresql
     ports:
-      - 9091:8080
+      - "9091:8080"
     networks:
       - paperless-network
 
