--- a/compose-development.yml
+++ b/compose-development.yml
@@ -34,6 +34,17 @@ services:
     networks:
       - paperless-network
 
+  rabbitmq:
+    image: docker.io/library/rabbitmq:management-alpine
+    ports:
+      - "5672:5672"
+      - "9093:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: rabbitmq_user
+      RABBITMQ_DEFAULT_PASS: rabbitmq_passwd
+    networks:
+      - paperless-network
+
 networks:
   paperless-network:
     driver: bridge
