--- a/rest-api/src/test/resources/application.properties
+++ b/rest-api/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;
+spring.jpa.hibernate.ddl-auto=create-drop
 minio.endpoint=http://localhost:9000
 minio.credentials.accesskey=tmp
 minio.credentials.secretkey=tmp
