Implement stupid changes for the test system
Signed-off-by: SZanko <szanko_dev@proton.me>

--- a/compose-development.yml
+++ b/compose-development.yml
@@ -18,8 +18,8 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: postgresqluser
-      POSTGRES_PASSWORD: postgresqlpasswd
+      POSTGRES_USER: postgresql
+      POSTGRES_PASSWORD: postgresql
     volumes:
       - ./container-data/postgresql:/var/lib/postgresql/data
     networks:
