--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.jackson.date-format=at.fhtw.swkom.paperless.services.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.application.name=paperless-rest
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=
 minio.endpoint=http://localhost:9000
 minio.credentials.accesskey=${minioAccessKey}
 minio.credentials.secretkey=${minioSecretKey}
