--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.application.name=paperless-rest
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 minio.endpoint=http://localhost:9000
 minio.credentials.accesskey=${minioAccessKey}
 minio.credentials.secretkey=${minioSecretKey}
