Add more readme instructions
Signed-off-by: SZanko <szanko_dev@proton.me>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,9 @@ services:
       - minio
     ports:
       - 8081:8081
+    environment:
+      minioAccessKey: minioAccessKey
+      minioSecretKey: minioSecretKey
     networks:
       - paperless-network
 
