--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -10,3 +10,5 @@ minio.endpoint=http://localhost:9000
 minio.credentials.accesskey=${minioAccessKey}
 minio.credentials.secretkey=${minioSecretKey}
 minio.bucket=default
+rabbitmq.ocrWorkerOutputQueue=files.content
+rabbitmq.ocrWorkerInputQueue=files.input
