Implement RabbitMQListener in Spring Boot
Signed-off-by: SZanko <szanko_dev@proton.me>

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -12,3 +12,4 @@ minio.credentials.secretkey=${minioSecretKey}
 minio.bucket=default
 rabbitmq.ocrWorkerOutputQueue=files.content
 rabbitmq.ocrWorkerInputQueue=files.input
+spring.rabbitmq.username=
