--- a/rest-api/src/test/resources/application.properties
+++ b/rest-api/src/test/resources/application.properties
@@ -4,3 +4,7 @@ minio.endpoint=http://localhost:9000
 minio.credentials.accesskey=tmp
 minio.credentials.secretkey=tmp
 minio.bucket=default
+rabbitmq.ocrWorkerOutputQueue=files.content
+rabbitmq.ocrWorkerInputQueue=files.input
+spring.rabbitmq.username=rabbitmq_user
+spring.rabbitmq.password=rabbitmq_passwd
