--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -3,13 +3,17 @@ spring.jackson.date-format=at.fhtw.swkom.paperless.services.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.application.name=paperless-rest
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=
+spring.datasource.url=${dbUrl}
+spring.datasource.password=${dbPasswd}
+spring.datasource.username=${dbUser}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-minio.endpoint=http://localhost:9000
+minio.endpoint=${minioEndpoint:http://localhost:9000}
 minio.credentials.accesskey=${minioAccessKey}
 minio.credentials.secretkey=${minioSecretKey}
 minio.bucket=default
 rabbitmq.ocrWorkerOutputQueue=files.content
 rabbitmq.ocrWorkerInputQueue=files.input
-spring.rabbitmq.username=
+spring.rabbitmq.username=${RABBITMQ_DEFAULT_USER:rabbitmq_user}
+spring.rabbitmq.password=${RABBITMQ_DEFAULT_PASS:rabbitmq_passwd}
+spring.rabbitmq.host=${RABBITMQ_DEFAULT_HOST:localhost}
