Add ocr function and test
Signed-off-by: SZanko <szanko_dev@proton.me>

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .direnv
 .idea/
 .env
+.run
 build/
 bin/
 container-data/elasticSearch
@@ -11,3 +12,4 @@ frontend/node_modules
 
 *.zip
 .~lock.*
+*.log
