Add docker build which only copies the artifact into container
Signed-off-by: SZanko <szanko_dev@proton.me>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,14 @@ services:
     networks:
       - paperless-network
 
+  ocr-worker:
+    build: ocr-worker
+    image: fhtw.at/swkom/ocr-worker:latest
+    depends_on:
+      - rest-api
+    networks:
+        - paperless-network
+
 networks:
   paperless-network:
     #driver: host
