--- a/ocr-worker/.gitignore
+++ b/ocr-worker/.gitignore
@@ -2,7 +2,6 @@
 /classes
 /checkouts
 profiles.clj
-pom.xml
 pom.xml.asc
 *.jar
 *.class
@@ -12,3 +11,5 @@ pom.xml.asc
 .hgignore
 .hg/
 *.iml
+result
+flake.nix.*
