--- a/compose-development.yml
+++ b/compose-development.yml
@@ -45,6 +45,33 @@ services:
     networks:
       - paperless-network
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.16.1
+    ports: 
+      - "9200:9200"
+    environment:
+      ELASTIC_PASSWORD: elastic_passwd
+      http.port: 9200
+      http.cors.enabled: true
+      http.cors.allow-origin: \*
+      http.cors.allow-headers: X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
+      http.cors.allow-credentials: true
+      network.publish_host: localhost
+      xpack.security.enabled: false
+      discovery.type: single-node
+      http.max_content_length: 10MB
+    volumes:
+      - ./container-data/elasticSearch:/usr/share/elasticsearch/data
+    networks:
+      - paperless-network
+
+  searchui:
+    image: docker.io/appbaseio/dejavu
+    ports:
+      - "9092:1358"
+    networks:
+      - paperless-network
+
 networks:
   paperless-network:
     driver: bridge
