--- a/ocr-worker/pom.xml
+++ b/ocr-worker/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>pdfbox</artifactId>
       <version>2.0.32</version>
     </dependency>
+    <dependency>
+      <groupId>org.clojure</groupId>
+      <artifactId>data.json</artifactId>
+      <version>2.5.1</version>
+    </dependency>
   </dependencies>
 
   <build>
