--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,8 +84,8 @@ services:
     ports:
       - "8081:8081"
     environment:
-      minioAccessKey: ${minioAccessKey}
-      minioSecretKey: ${minioSecretKey}
+      minioAccessKey: 9GwAvnkr8OIB5tl09xig
+      minioSecretKey: adU1Uf8UVmxHQtBHDrdBX6dzHqlRgvUlRdrMoKCG
       dbUrl: jdbc:postgresql://paperless-postgres-db-1:5432/postgres
       dbPasswd: postgresql
       dbUser: postgresql
@@ -115,6 +115,18 @@ services:
       - rest-api
     networks:
         - paperless-network
+    environment:
+      minioAccessKey: ${minioAccessKey}
+      minioSecretKey: ${minioSecretKey}
+      dbUrl: jdbc:postgresql://paperless-postgres-db-1:5432/postgres
+      dbPasswd: postgresql
+      dbUser: postgresql
+      minioEndpoint: http://paperless-minio-1:9000
+      RABBITMQ_DEFAULT_USER: rabbitmq_user
+      RABBITMQ_DEFAULT_PASS: rabbitmq_passwd
+      RABBITMQ_DEFAULT_HOST: paperless-rabbitmq-1
+      TESSDATA_PREFIX: /usr/share/tessdata/
+
 
 networks:
   paperless-network:
