--- a/workers/pom.xml
+++ b/workers/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>data.json</artifactId>
       <version>2.5.1</version>
     </dependency>
+    <dependency>
+      <groupId>cc.qbits</groupId>
+      <artifactId>spandex</artifactId>
+      <version>0.8.2</version>
+    </dependency>
   </dependencies>
 
   <build>
